--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,9 @@ all.config
 
 # fetched Android config fragments
 android/configs/android-*.cfg
+
+# ignore out dir
+out/
+
+# ignore build script 
+build.sh
